Fixed a title page spacing issue.

--- a/src/components/title/title.module.scss
+++ b/src/components/title/title.module.scss
@@ -61,8 +61,8 @@
     max-width: 500px;
     position: relative; 
     transform: translateY(-55%);
-    top: 55%;
-    margin: 0 auto;
+    top: 50%;
+    margin: 0 auto 30px auto;
   }
   .logo{
     margin: 10px;
